fix: Variant success button in dark mode

--- a/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
@@ -52,11 +52,7 @@ button {
   }
 
   &.success {
-    @apply bg-[#44ce4b] text-white dark:text-white;
-
-    &:hover {
-      @apply bg-[#3dbb45];
-    }
+    @apply bg-[#44ce4b] dark:bg-[#44ce4b] text-white dark:text-white;
   }
 
   &.secondary {
